# microVisualization

./: .gitignore  CMakeLists.txt  NetflixMicroservices.thrift  README.md  TwitterMicroservices.thrift  contributors.txt  package-lock.json  package.json  server.js
app/: app.css  app.js  create_json.py  create_json_ecommerce_availability.py  create_json_ecommerce_scaleout.py  create_json_google_multiuser.py  create_json_google_multiuser_expanded.py  create_json_iot_local_hierarchical.py  create_json_iot_remote.py  create_json_iot_remote_hierarchical.py  create_json_iot_remote_hierarchical_routers.py  create_json_netflix_complete.py  create_json_twitter_complete.py  create_json_twitter_compose.py  d3-timeline.js  index.html  index_bundle.html  index_gantt.html  labelTestData.json
app/archs/: cassandra_arch  edge_arch  migration_arch  (+5 more)
config/: PortConfig.json  config.json  port_config.json
cpu/: netflix_review_mpstat_nginx1_4_10000_1000.txt  netflix_review_mpstat_nginx1_mmc1_mongod1_4_10000_1000.txt  netflix_review_mpstat_nginx1_mmc1_mongod1_4_20000_1000.txt  netflix_review_mpstat_nginx1_mmc1_mongod1_4_25000_1000.txt  netflix_review_mpstat_nginx1_mmc1_mongod1_4_27000_1000.txt  netflix_review_mpstat_nginx1_mmc1_mongod1_4_29000_1000.txt  netflix_review_mpstat_nginx1_mmc1_mongod1_4_30000_1000.txt  netflix_review_mpstat_nginx1_mmc1_mongod1_4_50000_1000.txt  netflix_review_mpstat_nginx2_4_10000_1000.txt  netflix_review_mpstat_nginx2_mmc1_mongod1_4_20000_1000.txt  netflix_review_mpstat_nginx2_mmc1_mongod1_4_27000_1000.txt  netflix_review_mpstat_nginx2_mmc1_mongod1_4_29000_1000.txt  netflix_review_mpstat_nginx2_mmc1_mongod1_4_30000_1000.txt  netflix_review_mpstat_nginx2_mmc1_mongod2_4_20000_1000.txt  netflix_review_mpstat_nginx2_mmc1_mongod2_4_28000_1000.txt  netflix_review_mpstat_nginx2_mmc1_mongod2_4_30000_1000.txt  netflix_review_mpstat_nginx3_4_10000_1000.txt  netflix_review_mpstat_nginx4_4_10000_1000.txt  netflix_review_mpstat_nginx5_4_10000_1000.txt  netflix_review_mpstat_nginx5_mmc1_mongod1_4_30000_1000.txt  netflix_review_mpstat_nginx5_mmc1_mongod2_4_28000_1200.txt  netflix_review_mpstat_nginx5_mmc1_mongod2_4_30000_1000.txt  old_parse_mpstat.py  parse_mpstat.py  parsed_netflix_review_mpstat_nginx1_4_10000_1000.txt  parsed_netflix_review_mpstat_nginx1_mmc1_mongod1_4_10000_1000.txt  parsed_netflix_review_mpstat_nginx1_mmc1_mongod1_4_20000_1000.txt  parsed_netflix_review_mpstat_nginx1_mmc1_mongod1_4_25000_1000.txt  parsed_netflix_review_mpstat_nginx1_mmc1_mongod1_4_27000_1000.txt  parsed_netflix_review_mpstat_nginx1_mmc1_mongod1_4_29000_1000.txt  parsed_netflix_review_mpstat_nginx1_mmc1_mongod1_4_30000_1000.txt  parsed_netflix_review_mpstat_nginx1_mmc1_mongod1_4_50000_1000.txt  parsed_netflix_review_mpstat_nginx2_4_10000_1000.txt  parsed_netflix_review_mpstat_nginx2_mmc1_mongod1_4_20000_1000.txt  parsed_netflix_review_mpstat_nginx2_mmc1_mongod1_4_27000_1000.txt  parsed_netflix_review_mpstat_nginx2_mmc1_mongod1_4_29000_1000.txt  parsed_netflix_review_mpstat_nginx2_mmc1_mongod1_4_30000_1000.txt  parsed_netflix_review_mpstat_nginx2_mmc1_mongod2_4_20000_1000.txt  parsed_netflix_review_mpstat_nginx2_mmc1_mongod2_4_28000_1000.txt  parsed_netflix_review_mpstat_nginx2_mmc1_mongod2_4_30000_1000.txt  (+5 more)
docker/: process.py  reset.py  setup_compose_page.py  setup_compose_review.py  setup_stream_video.py
gen-cpp/: AssignRating.cpp  AssignRating.h  AssignRating_server.skeleton.cpp  BlockStats.cpp  BlockStats.h  BlockStats_server.skeleton.cpp  ComposeDM.cpp  ComposeDM.h  ComposeDM_server.skeleton.cpp  ComposePage.cpp  ComposePage.h  ComposePage_server.skeleton.cpp  ComposeReply.cpp  ComposeReply.h  ComposeReply_server.skeleton.cpp  ComposeRetweet.cpp  ComposeRetweet.h  ComposeRetweet_server.skeleton.cpp  ComposeReview.cpp  ComposeReview.h  ComposeReview_server.skeleton.cpp  ComposeTweet.cpp  ComposeTweet.h  ComposeTweet_server.skeleton.cpp  Generator.cpp  Generator.h  Generator_server.skeleton.cpp  GetCastInfo.cpp  GetCastInfo.h  GetCastInfo_server.skeleton.cpp  GetMovieReview.cpp  GetMovieReview.h  GetMovieReview_server.skeleton.cpp  GetPhoto.cpp  GetPhoto.h  GetPhoto_server.skeleton.cpp  GetPhotos.cpp  GetPhotos.h  GetPhotos_server.skeleton.cpp  GetPlot.cpp  (+100 more)
generator/: Generator.py  GeneratorServer.py  Loader.py
include/: netflix_microservices.h
recommendations/: part-m-00000
scripts/: LogComposePage.py  LogComposeReview.py  LogStreaming.py  kill_compose_page.sh  kill_compose_review.sh  kill_streaming.sh  run_compose_page.sh  run_compose_review.sh  run_streaming.sh
src/: AssignRatingServer.cpp  BlockStatsServer.cpp  CMakeLists.txt  ComposeDMServer.cpp  ComposePageServer.cpp  ComposeReplyServer.cpp  ComposeRetweetServer.cpp  ComposeReviewServer.cpp  ComposeTweetServer.cpp  GetCastInfoServer.cpp  GetMovieReviewServer.cpp  GetPhotoServer.cpp  GetPlotServer.cpp  GetRatingServer.cpp  GetThumbnailServer.cpp  GetVideoServer.cpp  GetWatchNextServer.cpp  MemcachedServer.cpp  MongoDMStorageServer.cpp  MongoTweetStorageServer.cpp  MovieInfoStorageServer.cpp  MovieReviewDBServer.cpp  ProcessImageServer.cpp  ProcessMovieIDServer.cpp  ProcessTagServer.cpp  ProcessTextServer.cpp  ProcessURLServer.cpp  ProcessUniqueIDServer.cpp  ProcessVideoServer.cpp  ReadTimelineServer.cpp  ReadTweetServer.cpp  ReviewStorageServer.cpp  UserAccountServer.cpp  UserReviewDBServer.cpp  WriteDMServer.cpp  WriteFavoriteServer.cpp  WriteMovieReviewDBServer.cpp  WriteTimelineServer.cpp  WriteUserDBServer.cpp  WriteUserGraphServer.cpp  (+22 more)
tcpdump/: proc_tcpdump.py  proc_tcpdump_mmc.py  proc_tcpdump_mongo.py  run_tcp_dump.py  run_tcpdump.py  run_tcpdump_docker.py
test/: test_compose_page.py  test_compose_page_nginx.py  test_compose_review.py  test_compose_review_nginx.py  test_get_movie_review.py  test_movie_id.py  test_movie_review_db.py  test_review_storage.py  test_streaming.py  test_unique_id.py  test_user_account.py  test_watch_next.py  test_write_movie_db.py  test_write_user_db.py  write_movie_info.py
user_graph/: CMakeLists.txt  CreateUserGraph.cpp  user_graph.json
xapian/: CMakeLists.txt  XapianServer.cpp
(+697 files in other folders)
